<resources>
    <string name="app_name">BottomNavBar</string>

    <string name="categories">Categories</string>
    <string name="bottom_nav_item_home">Home</string>
    <string name="bottom_nav_item_search">Search</string>
    <string name="bottom_nav_item_cart">Cart</string>
    <string name="bottom_nav_item_profile">Profile</string>
    <string name="bottom_nav_item_more">More</string>
    <string name="backstack_tag">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_apparel">Apparel</string>
    <string name="tab_text_beauty">Beauty</string>
    <string name="tab_text_shoes">Shoes</string>
    <string name="first_tab">first</string>
    <string name="second_tab">second</string>
    <string name="third_tab">third</string>
    <string name="one_tab">one</string>
    <string name="two_tab">two</string>
    <string name="three_tab">three</string>
    <string name="icon_and_text_tabs">Icon and Text Tabs</string>
    <string name="network_item_drawer">My Networks</string>
    <string name="wifi_on_map_item_drawer">WiFi On Map</string>
    <string name="data_usage_item_drawer">Data Usage</string>
    <string name="add_hidden_network_item_drawer">Add Hidden Network</string>
    <string name="header_text">Header text</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawerr">Close</string>
    <string name="apparel_text">Apparel</string>
    <string name="beauty_text">Beauty</string>
    <string name="shoes_text">Shoes</string>
    <string name="more_text">More</string>
    <string name="example_price">100AMD</string>
    <string name="shoe_text_example">shoes description</string>
    <string name="enter_text">enter text</string>
    <string name="save_button">Save</string>
    <string name="Settings">Settings</string>
    <string name="magpi_appName">Magpi</string>
<string name="CustomAdapterShoesToastText">the price is %1$s, and clicked position is %2$d</string>
    <string name="octoconnect_bottomText">OctoConnect</string>
</resources>